--- a/core-cloud-web/src/app/globals.css
+++ b/core-cloud-web/src/app/globals.css
@@ -24,31 +24,52 @@
   color-scheme: light dark;
 
   /* COLORS */
+  --theme-color-backdrop: rgba(245, 245, 247, 0.85);
   --theme-color-backgroundPrimary: hsl(0, 0, 100);
   --theme-color-boxShadow: purple; /* TODO */
   --theme-color-fillSecondary: rgba(120, 120, 128, 0.16);
   --theme-color-labelPrimary: rgba(0, 0, 0, 0.88);
   --theme-color-systemBlack: rgb(0, 0, 0);
+  --theme-color-systemBlue: rgb(0, 113, 227);
+  --sk-button-background: #0071e3;
+  --sk-button-border-color: #06c;
+  --sk-button-color: #06c;
+  --sk-button-background-hover: #0076df;
+  --sk-button-background-active: #006edb;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     /* COLORS */
+    --theme-color-backdrop: rgba(10, 10, 10, 0.8);
     --theme-color-backgroundPrimary: hsl(240, 3.4, 11.4);
     --theme-color-boxShadow: rgba(0, 0, 0, 0.65);
     --theme-color-fillSecondary: purple; /* TODO */
     --theme-color-labelPrimary: hsla(0, 0, 100, 0.98);
     --theme-color-systemBlack: rgb(255, 255, 255);
+    --theme-color-systemBlue: rgb(0, 154, 255);
+    --sk-button-background: #0071e3;
+    --sk-button-border-color: #2997ff;
+    --sk-button-color: #2997ff;
+    --sk-button-background-hover: #0076df;
+    --sk-button-background-active: #006edb;
   }
 }
 
 @theme inline {
   /* COLORS */
+  --color-backdrop: var(--theme-color-backdrop);
   --color-backgroundPrimary: var(--theme-color-backgroundPrimary);
   --color-boxShadow: var(--theme-color-boxShadow);
   --color-fillSecondary: var(--theme-color-fillSecondary);
   --color-labelPrimary: var(--theme-color-labelPrimary);
   --color-systemBlack: var(--theme-color-systemBlack);
+  --color-systemBlue: var(--theme-color-systemBlue);
+  --color-sk-button-background: var(--sk-button-background);
+  --color-sk-button-border-color: var(--sk-button-border-color);
+  --color-sk-button-color: var(--sk-button-color);
+  --color-sk-button-background-hover: var(--sk-button-background-hover);
+  --color-sk-button-background-active: var(--sk-button-background-active);
 
   /* TYPOGRAPHY */
   --text-base: 17px;
@@ -154,5 +175,15 @@
   @keyframes fade-in {
     0% { opacity: 0 }
     to { opacity: .6 }
+  }
+
+  @keyframes fadeIn {
+    0% { opacity: 0 }
+    to { opacity:1 }
+  }
+
+  @keyframes fadeInAndBarelyScale {
+    0% { opacity: 0; transform: scale(.9) }
+    to { transform: scale(1); opacity: 1 }
   }
 }
