--- a/core-cloud-web/src/app/globals.css
+++ b/core-cloud-web/src/app/globals.css
@@ -26,6 +26,7 @@
   /* COLORS */
   --theme-color-appTint: hsl(210, 100, 44.5);
   --theme-color-backdrop: rgba(245, 245, 247, 0.85);
+  --theme-color-backgroundLayer1: rgb(242, 242, 247);
   --theme-color-backgroundPrimary: hsl(0, 0, 100);
   --theme-color-boxShadow: rgba(0, 0, 0, 0.16);
   --theme-color-fillPrimary: rgba(120, 120, 128, 0.2);
@@ -63,6 +64,7 @@
     /* COLORS */
     --theme-color-appTint: hsl(204, 100, 50);
     --theme-color-backdrop: rgba(10, 10, 10, 0.8);
+    --theme-color-backgroundLayer1: rgb(50, 50, 54);
     --theme-color-backgroundPrimary: hsl(240, 3.4, 11.4);
     --theme-color-boxShadow: rgba(0, 0, 0, 0.65);
     --theme-color-fillPrimary: hsla(0, 0, 71.4, 0.3);
@@ -104,6 +106,7 @@
   /* COLORS */
   --color-appTint: var(--theme-color-appTint);
   --color-backdrop: var(--theme-color-backdrop);
+  --color-backgroundLayer1: var(--theme-color-backgroundLayer1);
   --color-backgroundPrimary: var(--theme-color-backgroundPrimary);
   --color-boxShadow: var(--theme-color-boxShadow);
   --color-fillPrimary: var(--theme-color-fillPrimary);
@@ -322,6 +325,12 @@
   @keyframes fadeOut {
     0% { opacity: 1 }
     to { opacity: 0 }
+  }
+
+  @keyframes loading-dots-dot {
+    0% { background-color: var(--theme-color-gray3) }
+    20% { background-color: var(--theme-color-gray1) }
+    40% { background-color: var(--theme-color-gray3) }
   }
 
   @keyframes slideIn {
