--- a/core-cloud-web/sources/core-cloud-web/src/app/globals.css
+++ b/core-cloud-web/sources/core-cloud-web/src/app/globals.css
@@ -17,14 +17,29 @@
 /*  limitations under the License.                                            */
 /*===----------------------------------------------------------------------===*/
 
-@import "tailwindcss";
+@import "tailwindcss" source("../../../../sources");
 @source "../../.env";
 
 :root {
   color-scheme: light dark;
 
   /* COLORS */
+  --music-joeColor: rgba(0, 0, 0, .14);
   --music-keyColor: rgb(250, 35, 59);
+  --music-lcd-primary-text-color: rgba(0, 0, 0, 0.85);
+  --music-lcd-secondary-text-color: rgba(0, 0, 0, 0.5);
+  --music-miniPlayerBackground: hsla(0, 0, 100, 0.9);
+  --music-playerBGFill: rgba(255, 255, 255, 0.88);
+  --music-playerDropShadow2: rgba(0, 0, 0, .07);
+  --music-playerInnerShadow: rgba(255, 255, 255, .45);
+  --music-playerLCDBGFill: rgb(255, 255, 255);
+  --music-playerMissingArtworkBg: rgb(233, 233, 233);
+  --music-playerMissingArtworkIcon: rgb(220, 220, 220);
+  --music-playerScrubberFill: rgba(0, 0, 0, .5);
+  --music-playerScrubberTrack: rgba(0, 0, 0, .1);
+  --music-systemPrimary-vibrant: rgb(76, 76, 76);
+  --music-systemSecondary: rgba(0, 0, 0, 0.5);
+  --music-systemTertiary: rgba(0, 0, 0, 0.25);
   --sk-body-link-color: #06c;
   --sk-body-text-color: #1d1d1f;
   --sk-button-background: #0071e3;
@@ -63,12 +78,33 @@
   --theme-color-systemRed: hsl(0, 100, 44.5);
   --theme-color-systemWhite: hsl(0, 0, 100);
   --theme-color-systemYellow: rgb(255, 205, 0);
+
+  /* EFFECTS */
+  --music-shadow-playerContainer:
+    0 1px 0 rgba(0, 0, 0, .05),
+    0 1px 3px var(--music-playerDropShadow2),
+    inset 0 1px 1px var(--music-playerInnerShadow);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     /* COLORS */
+    --music-joeColor: rgba(255, 255, 255, .05);
     --music-keyColor: rgb(250, 45, 72);
+    --music-lcd-primary-text-color: rgba(255, 255, 255, 0.85);
+    --music-lcd-secondary-text-color: rgba(255, 255, 255, 0.55);
+    --music-miniPlayerBackground: rgba(37, 37, 37, 0.9);
+    --music-playerBGFill: rgba(45, 45, 45, 0.88);
+    --music-playerDropShadow2: rgba(0, 0, 0, .1);
+    --music-playerInnerShadow: rgba(255, 255, 255, .1);
+    --music-playerLCDBGFill: rgb(77, 77, 77);
+    --music-playerMissingArtworkBg: rgb(50, 50, 50);
+    --music-playerMissingArtworkIcon: rgb(67, 67, 67);
+    --music-playerScrubberFill: rgba(255, 255, 255, 0.6);
+    --music-playerScrubberTrack: rgba(255, 255, 255, .1);
+    --music-systemPrimary-vibrant: rgb(229, 229, 229);
+    --music-systemSecondary: rgba(255, 255, 255, 0.55);
+    --music-systemTertiary: rgba(255, 255, 255, 0.25);
     --sk-body-link-color: #2997ff;
     --sk-body-text-color: #f5f5f7;
     --sk-button-background: #0071e3;
@@ -107,6 +143,12 @@
     --theme-color-systemRed: hsl(358, 100, 59.4);
     --theme-color-systemWhite: hsl(0, 0, 100);
     --theme-color-systemYellow: rgb(255, 214, 10);
+
+    /* EFFECTS */
+    --music-shadow-playerContainer:
+      0 1px 0 rgba(0, 0, 0, 0.05),
+      0 1px 3px var(--music-playerDropShadow2),
+      inset 0 -0.5px 0 var(--music-playerInnerShadow);
   }
 }
 
@@ -148,7 +190,22 @@
   --color-systemWhite: var(--theme-color-systemWhite);
   --color-systemYellow: var(--theme-color-systemYellow);
 
+  --color-music-joeColor: var(--music-joeColor);
   --color-music-keyColor: var(--music-keyColor);
+  --color-music-lcd-primary-text-color: var(--music-lcd-primary-text-color);
+  --color-music-lcd-secondary-text-color: var(--music-lcd-secondary-text-color);
+  --color-music-miniPlayerBackground: var(--music-miniPlayerBackground);
+  --color-music-playerBGFill: var(--music-playerBGFill);
+  --color-music-playerDropShadow2: var(--music-playerDropShadow2);
+  --color-music-playerInnerShadow: var(--music-playerInnerShadow);
+  --color-music-playerLCDBGFill: var(--music-playerLCDBGFill);
+  --color-music-playerMissingArtworkBg: var(--music-playerMissingArtworkBg);
+  --color-music-playerMissingArtworkIcon: var(--music-playerMissingArtworkIcon);
+  --color-music-playerScrubberFill: var(--music-playerScrubberFill);
+  --color-music-playerScrubberTrack: var(--music-playerScrubberTrack);
+  --color-music-systemPrimary-vibrant: var(--music-systemPrimary-vibrant);
+  --color-music-systemSecondary: var(--music-systemSecondary);
+  --color-music-systemTertiary: var(--music-systemTertiary);
 
   --color-sk-body-link-color: var(--sk-body-link-color);
   --color-sk-body-text-color: var(--sk-body-text-color);
@@ -157,6 +214,9 @@
   --color-sk-button-color: var(--sk-button-color);
   --color-sk-button-background-hover: var(--sk-button-background-hover);
   --color-sk-button-background-active: var(--sk-button-background-active);
+
+  /* EFFECTS */
+  --shadow-music-playerContainer: var(--music-shadow-playerContainer);
 
   /* TYPOGRAPHY */
   --text-base: 17px;
