--- a/core-cloud-web/sources/core-cloud-web/src/app/globals.css
+++ b/core-cloud-web/sources/core-cloud-web/src/app/globals.css
@@ -43,6 +43,7 @@
   --music-systemPrimary-vibrant: rgb(76, 76, 76);
   --music-systemSecondary: rgba(0, 0, 0, 0.5);
   --music-systemTertiary: rgba(0, 0, 0, 0.25);
+  --music-systemStandardThinMaterialSover: hsla(0, 0, 96, 0.48);
   --music-trackBackgroundEven: rgba(0, 0, 0, .02);
   --sk-body-link-color: #06c;
   --sk-body-text-color: #1d1d1f;
@@ -112,6 +113,7 @@
     --music-systemPrimary-vibrant: rgb(229, 229, 229);
     --music-systemSecondary: rgba(255, 255, 255, 0.55);
     --music-systemTertiary: rgba(255, 255, 255, 0.25);
+    --music-systemStandardThinMaterialSover: rgba(40, 40, 40, 0.5);
     --music-trackBackgroundEven: rgba(255, 255, 255, .05);
     --sk-body-link-color: #2997ff;
     --sk-body-text-color: #f5f5f7;
@@ -217,6 +219,9 @@
   --color-music-systemPrimary-vibrant: var(--music-systemPrimary-vibrant);
   --color-music-systemSecondary: var(--music-systemSecondary);
   --color-music-systemTertiary: var(--music-systemTertiary);
+  --color-music-systemStandardThinMaterialSover: var(
+    --music-systemStandardThinMaterialSover
+  );
   --color-music-trackBackgroundEven: var(--music-trackBackgroundEven);
 
   --color-sk-body-link-color: var(--sk-body-link-color);
